@@ -1,3 +1,7 @@
+29 March 2011: Wouter
+	- nsd recreates nsd.db if it has not been closed properly or is
+	  corrupted (bad header or wrong file format).
+
 28 March 2011: Wouter
 	- NSD without zonec.  NSD loads zonefiles on start.
 	  NSD stores NSEC3hashes on disk.
